--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -15,8 +15,8 @@
         <Pane prefHeight="351.0" prefWidth="409.0">
             <children>
                 <ComboBox fx:id="boxCountry" layoutX="14.0" layoutY="93.0" onShowing="#chooseCountry" prefWidth="150.0" />
-                <ComboBox fx:id="boxCity" disable="true" layoutX="168.0" layoutY="93.0" prefWidth="150.0" />
-                <Button disable="true" layoutX="318.0" layoutY="254.0" mnemonicParsing="false" text="OK" />
+                <ComboBox fx:id="boxCity" layoutX="168.0" layoutY="93.0" onShowing="#chooseCity" prefWidth="150.0" />
+                <Button layoutX="318.0" layoutY="254.0" mnemonicParsing="false" onAction="#getCityInfo" text="OK" />
                 <Label layoutX="14.0" layoutY="68.0" text="Choose country" />
                 <Label layoutX="168.0" layoutY="68.0" text="Choose city" />
                 <Label layoutX="14.0" layoutY="151.0" text="Population:" />
