--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -16,7 +16,7 @@
             <children>
                 <ComboBox fx:id="boxCountry" layoutX="14.0" layoutY="93.0" onShowing="#chooseCountry" prefWidth="150.0" />
                 <ComboBox fx:id="boxCity" layoutX="168.0" layoutY="93.0" onShowing="#chooseCity" prefWidth="150.0" />
-                <Button layoutX="318.0" layoutY="254.0" mnemonicParsing="false" onAction="#getCityInfo" text="OK" />
+                <Button fx:id="btnOk" layoutX="318.0" layoutY="254.0" mnemonicParsing="false" onAction="#getCityInfo" text="OK" />
                 <Label layoutX="14.0" layoutY="68.0" text="Choose country" />
                 <Label layoutX="168.0" layoutY="68.0" text="Choose city" />
                 <Label layoutX="14.0" layoutY="151.0" text="Population:" />
