--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -16,7 +16,7 @@
             <children>
                 <ComboBox fx:id="boxCountry" layoutX="14.0" layoutY="93.0" onShowing="#chooseCountry" prefWidth="150.0" />
                 <ComboBox fx:id="boxCity" layoutX="168.0" layoutY="93.0" onShowing="#chooseCity" prefWidth="150.0" />
-                <Button fx:id="btnOk" layoutX="318.0" layoutY="254.0" mnemonicParsing="false" onAction="#getCityInfo" text="OK" />
+                <Button fx:id="btnOk" layoutX="343.0" layoutY="93.0" mnemonicParsing="false" onAction="#getCityInfo" text="OK" />
                 <Label layoutX="14.0" layoutY="68.0" text="Choose country" />
                 <Label layoutX="168.0" layoutY="68.0" text="Choose city" />
                 <Label layoutX="14.0" layoutY="151.0" text="Population:" />
@@ -32,6 +32,8 @@
                 <Label fx:id="lblTemperature" layoutX="97.0" layoutY="176.0" text=". . ." />
                 <Label fx:id="lblHumidity" layoutX="97.0" layoutY="199.0" text=". . ." />
                 <Label fx:id="lblDistance" layoutX="97.0" layoutY="222.0" text=". . ." />
+            <Label fx:id="lblCountry" layoutX="28.0" layoutY="258.0" text="Country:" />
+            <Label fx:id="lblCity" layoutX="50.0" layoutY="275.0" text="City:" />
             </children></Pane>
     </children>
 </GridPane>
