--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -19,21 +19,22 @@
                 <Button fx:id="btnOk" layoutX="343.0" layoutY="93.0" mnemonicParsing="false" onAction="#getCityInfo" text="OK" />
                 <Label layoutX="14.0" layoutY="68.0" text="Choose country" />
                 <Label layoutX="168.0" layoutY="68.0" text="Choose city" />
-                <Label layoutX="14.0" layoutY="151.0" text="Population:" />
-                <Label layoutX="14.0" layoutY="176.0" text="Temperature:" />
-                <Label layoutX="14.0" layoutY="199.0" text="Humidity:" />
-                <Label layoutX="14.0" layoutY="222.0" text="Distance:" />
                 <Label layoutX="164.0" layoutY="14.0" text="CITY INFO" textAlignment="CENTER">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Label>
-                <Label fx:id="lblPopulation" layoutX="97.0" layoutY="151.0" text=". . ." />
-                <Label fx:id="lblTemperature" layoutX="97.0" layoutY="176.0" text=". . ." />
-                <Label fx:id="lblHumidity" layoutX="97.0" layoutY="199.0" text=". . ." />
-                <Label fx:id="lblDistance" layoutX="97.0" layoutY="222.0" text=". . ." />
-            <Label fx:id="lblCountry" layoutX="28.0" layoutY="258.0" text="Country:" />
-            <Label fx:id="lblCity" layoutX="50.0" layoutY="275.0" text="City:" />
+                <Label fx:id="lblPopulation" layoutX="25.0" layoutY="143.0" prefHeight="17.0" prefWidth="61.0" text="Population:" />
+                <Label fx:id="lblTemperature" layoutX="14.0" layoutY="167.0" text="Temperature:" />
+                <Label fx:id="lblHumidity" layoutX="30.0" layoutY="193.0" text="Humidity:" />
+                <Label fx:id="lblDistance" layoutX="32.0" layoutY="222.0" text="Distance:" />
+            <Label fx:id="lblCountry" layoutX="229.0" layoutY="143.0" text="Country:" />
+            <Label fx:id="lblCity" layoutX="251.0" layoutY="167.0" text="City:" />
+            <CheckBox fx:id="checkBoxDetail" layoutX="298.0" layoutY="239.0" mnemonicParsing="false" onAction="#showDetailInfo" text="Detail info" />
+            <Label fx:id="lblSunset" layoutX="201.0" layoutY="291.0" text="Sunset:" />
+            <Label fx:id="lblSunrise" layoutX="201.0" layoutY="266.0" text="Sunrise:" />
+            <Label fx:id="lblLon" layoutX="14.0" layoutY="266.0" text="Lon:" />
+            <Label fx:id="lblLat" layoutX="14.0" layoutY="291.0" text="Lat:" />
             </children></Pane>
     </children>
 </GridPane>
